Write other technologies

--- a/Scriptie/tin-bachproef.tex
+++ b/Scriptie/tin-bachproef.tex
@@ -555,8 +555,12 @@ Another wireless technology that is built completely for home automation is Z-Wa
 \label{subsec:ant}
 ANT is another good example of a Bluetooth Low Energy competitor. This is again a proprietary technology and was built with sensor networks in mind. It features powerful mesh networking as well as star, tree and point-to-point networks, allowing all kind of networks to be used in unison.
 
+\section{Other wireless technologies}
+\label{sec:othertechnologies}
+There are loads of other technologies that can be used to power the Internet of Things, but we won't go too much in depth in these. Some of these technologies and protocols are X10 (home automation), KNX (home automation) and M-bus (industry). Other very big technologies, not necessarily in the Low Energy/Low Range spectrum are LoRa (Long Range), GPRS (cellular) and Sigfox (Long Range).
+
 \section{Future of Bluetooth Low Energy}
-\label{subsec:futureble}
+\label{sec:futureble}
 Bluetooth Low Energy has been an exciting technology from the start and is gaining popularity at a very rapid rate. While the Bluetooth 4.0 specification brought Bluetooth Low Energy to life, some very much needed updates have made it to the Bluetooth specification, which is now at version 4.2. Bluetooth 4.1 brought improved consumer usability with better co-existence between Bluetooth Low Energy and Bluetooth BR/EDR, as well as increased data exchange rate and more flexibility for the developers. The 4.1 specification also brought IP-based connections to Bluetooth Low Energy. In essence, a device can directly communicate over internet once it's been connected to a gateway that has internet access, like a smartphone.
 
 The newest update, Bluetooth 4.2, brings yet more changes to the Bluetooth specification. It brings improved speeds yet again, support for IPv6, 6LoWPAN (IPv6 over Low power Wireless Personal Area Networks) and improved security.
