Finish POC chapter and write some things in conclusion

--- a/Scriptie/tin-bachproef.bib
+++ b/Scriptie/tin-bachproef.bib
@@ -1,5 +1,29 @@
 % Encoding: windows-1252
 
+@Misc{ashford2015,
+  author = {Ashford, Warwick},
+  title =  {Researchers raise privacy concerns about Bluetooth Low Energy devices},
+  year =   {2015},
+  note =   {[Online; accessed 19-March-2016]},
+  url =    {Researchers raise privacy concerns about Bluetooth Low Energy devices}
+}
+
+@Misc{bbcnews2015,
+  author = {BBC News},
+  title =  {China imposes smartwatch and wearable tech army ban},
+  year =   {2015},
+  note =   {[Online; accessed 19-March-2016]},
+  url =    {http://www.bbc.com/news/technology-32718266}
+}
+
+@TechReport{clapper2016,
+  author =      {Clapper, James R},
+  title =       {Statement for the Record Worldwide Threat Assessment of the U.S. Intelligence Community},
+  institution = {DTIC Document},
+  year =        {2016},
+  url =         {http://www.intelligence.senate.gov/sites/default/files/wwt2016.pdf}
+}
+
 
 @Article{Creeger2009,
   Title                    = {{CTO Roundtable: Cloud Computing}},
@@ -47,6 +71,22 @@
   Publisher                = {Molecular Diversity Preservation International}
 }
 
+@Misc{goodin2015,
+  author = {Goodin, Dan},
+  title =  {9 baby monitors wide open to hacks that expose users’ most private moments},
+  year =   {2015},
+  note =   {[Online; accessed 19-March-2016]},
+  url =    {http://arstechnica.com/security/2015/09/9-baby-monitors-wide-open-to-hacks-that-expose-users-most-private-moments/}
+}
+
+@Misc{greenberg2015,
+  author = {Greenberg, Andy},
+  title =  {Hackers Remotely Kill a Jeep on the Highway - With Me in It},
+  year =   {2015},
+  note =   {[Online; accessed 19-March-2016]},
+  url =    {https://www.wired.com/2015/07/hackers-remotely-kill-jeep-highway/}
+}
+
 @Article{haartsen2000bluetooth,
   Title                    = {The Bluetooth radio system},
   Author                   = {Haartsen, Jaap C},
@@ -59,11 +99,35 @@
   Publisher                = {IEEE}
 }
 
+@Misc{hirsch2015,
+  author = {Hirsch, Jerry},
+  title =  {Hackers can now hitch a ride on car computers},
+  year =   {2015},
+  note =   {[Online; accessed 19-March-2016]},
+  url =    {http://www.latimes.com/business/autos/la-fi-hy-car-hacking-20150914-story.html}
+}
+
+@Misc{iyer2015,
+  author = {Iyer, Kavita},
+  title =  {Smartwatches vulnerable to hacking says Researchers},
+  year =   {2015},
+  note =   {[Online; accessed 19-March-2016]},
+  url =    {http://www.techworm.net/2015/09/smartwatches-vulnerable-to-hacking-says-researchers.html}
+}
+
 @Article{kamath2010measuring,
   Title                    = {Measuring bluetooth low energy power consumption},
   Author                   = {Kamath, Sandeep and Lindh, Joakim},
   Journal                  = {Texas instruments application note AN092, Dallas},
   Year                     = {2010}
+}
+
+@Misc{kessler2015,
+  author = {Kessler, Aaron M.},
+  title =  {Fiat Chrysler Issues Recall Over Hacking},
+  year =   {2015},
+  note =   {[Online; accessed 19-March-2016]},
+  url =    {http://www.nytimes.com/2015/07/25/business/fiat-chrysler-recalls-1-4-million-vehicles-to-fix-hacking-issue.html}
 }
 
 @Article{martelli2014bluetooth,
@@ -86,6 +150,22 @@
   Publisher                = {SAGE Publications}
 }
 
+@Misc{porup2016,
+  author = {Porup, J.M.},
+  title =  {"Internet of Things" security is hilariously broken and getting worse},
+  year =   {2016},
+  note =   {[Online; accessed 19-March-2016]},
+  url =    {http://arstechnica.com/security/2016/01/how-to-search-the-internet-of-things-for-photos-of-sleeping-babies/}
+}
+
+@Misc{porup20162,
+  author =       {Porup, J.M.},
+  title =        {How to search the Internet of Things for photos of sleeping babies},
+  howpublished = {\url{http://arstechnica.co.uk/security/2016/01/how-to-search-the-internet-of-things-for-photos-of-sleeping-babies/}},
+  year =         {2015},
+  note =         {[Online; accessed 19-March-2016]}
+}
+
 @InProceedings{siekkinen2012low,
   author =       {Siekkinen, Matti and Hiienkari, Markus and Nurminen, Jukka K and Nieminen, Johanna},
   title =        {How low energy is bluetooth low energy? comparative measurements with zigbee/802.15. 4},
@@ -95,15 +175,30 @@
   organization = {IEEE}
 }
 
-@Book{Townsend2014,
-  Title                    = {Getting Started with Bluetooth Low Energy},
-  Author                   = {Kevin Townsend, Carles Cufì, Akiba, Robert Davidson},
-  Editor                   = {Brian Sawyer, Mike Loukides},
-  Publisher                = {O'Reilly Media, Inc.},
-  Year                     = {2014},
+@Article{stanislav2015,
+  author =  {Stanislav, Mark and Beardsley, Tod},
+  title =   {HACKING IoT: A Case Study on Baby Monitor Exposures and Vulnerabilities},
+  journal = {Rapid7},
+  year =    {2015}
+}
 
-  Owner                    = {Jan},
-  Timestamp                = {2016.02.02}
+@Book{Townsend2014,
+  title =     {Getting Started with Bluetooth Low Energy},
+  publisher = {O'Reilly Media, Inc.},
+  year =      {2014},
+  author =    {Townsend, Kevin and Cufì, Carles and Akiba and Davidson, Robert},
+  editor =    {Sawyer, Brian and Loukides, Mike},
+  owner =     {Jan},
+  timestamp = {2016.02.02}
+}
+
+@InProceedings{wang2015mole,
+  author =       {Wang, He and Lai, Ted Tsung-Te and Roy Choudhury, Romit},
+  title =        {Mole: Motion leaks through smartwatch sensors},
+  booktitle =    {Proceedings of the 21st Annual International Conference on Mobile Computing and Networking},
+  year =         {2015},
+  pages =        {155--166},
+  organization = {ACM}
 }
 
 @Article{zheng2006toward,
