--- a/Scriptie/tin-bachproef.tex
+++ b/Scriptie/tin-bachproef.tex
@@ -328,6 +328,8 @@ Bluetooth Low Energy doesn't bring all good news, but there are also a few key l
 
 Another limitation is the transfer speed. Again, in theory, Bluetooth Low Energy can have a (full packet) transfer speed of up to 1 Mbps\footnote{1 Mbps equals to 100 kilobytes per second.}. If you take into account the actual data contained in said packet and add up all of the overhead that goes into transferring a packet, 5 to 10 KB per second is a much more realistic representation. Knowing this, it's safe to assume that Bluetooth Low Energy won't be replacing WiFi any time soon.
 
+A more concerning limitation is that Bluetooth Low Energy operates in the 2.4 GHz ISM frequency band, the same band that WiFi uses. They've chosen this band because the 2.4 GHz ISM band doesn't require any licensing cost, contributing to the very low chip cost of Bluetooth Low Energy devices. Luckily, Bluetooth Low Energy features an excellent algorithm to avoid major interference from WiFi, as it will avoid any channel that is being heavily used by other technologies.
+
 \section{Bluetooth configurations}
 \label{sec:bleconfigurations}
 Bluetooth Low Energy is known by a variety of names on the market and while some of them are used to describe the same technology, in a few there's some differences to be found. `Bluetooth Low Energy' is mostly used as a catch-all name and can consist of a few different configurations. Some people assume `classic' or Bluetooth BR/EDR is also Bluetooth Low Energy, but this assumption couldn't be more wrong. If you have a product that specifies that you must have Bluetooth Version 4.0 or later, you're probably dealing with a Bluetooth Low Energy product.
@@ -586,7 +588,7 @@ ANT is another good example of a Bluetooth Low Energy competitor. This is again 
 
 \section{Other wireless technologies}
 \label{sec:othertechnologies}
-There are loads of other technologies that can be used to power the Internet of Things, but we won't go too much in depth in these. Some of these technologies and protocols are X10 (home automation), KNX (home automation) and M-bus (industry). Other very big technologies, not necessarily in the Low Energy/Low Range spectrum are LoRa (Long Range), GPRS (cellular) and Sigfox (Long Range).
+There are quite a bit of other technologies that can be used to power the Internet of Things, discussing all of them would take a paper of its own. Some of these technologies and protocols are X10 (home automation), KNX (home automation) and M-bus (industry). Other technologies, not necessarily in the Low Energy/Low Range spectrum are LoRa (Long Range), GPRS (General Packet Radio Service) and Sigfox.
 
 \section{Future of Bluetooth Low Energy}
 \label{sec:futureble}
@@ -604,6 +606,10 @@ With all of the previous chapters, a good idea and base has been formed as to wh
 This chapter aims to provide a practical approach to answering some of the research questions stated in bold in subsection \ref{subsec:researchquestions} through a Proof of Concept. The Proof of Concept concerns building an Android application that can successfully connect, communicate and act as a gateway for Bluetooth Low Energy devices. First of all, the devices that were used in the making of this application will be talked about more in detail before looking at how one would implement a gateway for Android. As this is a prototype, a lot of optimizations have to be made and the method used might not be the most ideal one. Methods on one of the ways to implement this on a large scale will be given in section \ref{sec:futurework}.
 
 \newpage{}
+
+\section{Goal}
+\label{sec:pocgoal}
+The general goal for this Proof of Concept is to build a rough Android application that can connect with multiple Bluetooth Low Energy devices simultaneously, read data and write data. It should also be possible to register the smartphone as a gateway in an Internet of Things cloud, in this case the AllThingsTalk developer cloud. The application has to create devices it connects to on the platform and add its assets, sensors and actuators. Once the data is read on the device, it should also send that data to the correct asset on the online platform. Once this is achieved, the next goal is to enable two-way communication, not only sending data to the platform but also receiving data and sending it to the right device, sensor or actuator.
 
 \section{Used devices}
 \label{sec:devices}
@@ -633,10 +639,6 @@ This device features a lot of custom services and characteristics, so it's a ver
 \label{subsec:metawearcpro}
 For the last device, a MetaWear CPRO from MbientLab\footnote{https://store.mbientlab.com/product/metawear-cpro/} was used. This is another device destined for prototyping and features a large range of sensors. On top of that, it also runs off a coin cell battery, is very small and even allows developers to write their own firmware or expand the board. It features a temperature sensor, light sensor, a 10 axis motion sensor (gyroscope, magnitude, barometer) and the MetaWear CPRO used for this thesis is also fitted with a buzzer.
 
-\section{Goal}
-\label{sec:pocgoal}
-The general goal for this Proof of Concept is to build a rough Android application that can connect with multiple Bluetooth Low Energy devices simultaneously, read data and write data. It should also be possible to register the smartphone as a gateway in an Internet of Things cloud, in this case the AllThingsTalk developer cloud. The application has to create devices it connects to on the platform and add its assets, sensors and actuators. Once the data is read on the device, it should also send that data to the correct asset on the online platform. Once this is achieved, the next goal is to enable two-way communication, not only sending data to the platform but also receiving data and sending it to the right device, sensor or actuator.
-
 \section{Android programming}
 \label{sec:androidprogramming}
 In this section, the most important parts in building a gateway for Android will be discussed. Everything from building the Bluetooth layer to the network layer will be talked about and it will give a good overview of how all these APIs can work together. The full source code for the application is available on \texttt{GITHUB(LINK)}. This application is a working prototype to bridge Bluetooth Low Energy to the AllThingsTalk developer cloud.
@@ -657,9 +659,21 @@ The \texttt{BluetoothGatt} class allows exposes everything that has to do with d
 
 \subsection{Network layer}
 \label{subsec:networklayer}
+The network layer can differ from architecture to architecture, but the steps used to connect to the AllThingsTalk developer cloud will be discussed here. There are two kinds of clients that can interact with the cloud: a gateway and a device. The difference between these two is that a gateway can register and update multiple devices, but a device can only register and update itself. It makes sense that when using a smartphone, it should be configured as a gateway since it can connect with multiple devices.
+
+First things first, the smartphone has to be registered as a gateway before being able to send any data. The first step is to create the gateway as an orphan on the platform by sending a POST request to \texttt{https://api.smartliving.io/gateway} with a UID (unique identifier, in this case the MAC address of the smartphone), the name of the gateway (in this case the device name, Nexus 5) and the assets, which allow the gateway to be configured from the online portal.
+
+Once this procedure is finished, the smartphone is an orphan in the platform and has to be claimed within 30 seconds before time-out. In order to check if the gateway has been registered, a POST request can be sent to the same URI and once the device has been claimed the response will contain the gateway id. It's a good idea to then save the gateway id on the device so the claim procedure doesn't have to take place every time the application starts. The gateway can then be used to add assets to the online platform. This can be done by sending a PUT request to \texttt{https://api.smartliving.io/device/\_deviceId\_/asset/\_assetId\_/}. The \texttt{deviceId} and \texttt{assetId} are variables that should be carefully chosen so when data is received, the device knows what to do with it. To easily identify where the data should flow, the \texttt{deviceId} is determined by the connected Bluetooth device's unique address. The \texttt{assetId} is a combination of the Bluetooth Service UUID and the Bluetooth Characteristic UUID.
+
+After adding assets, the only thing left is to send actual data. This is done using the MQTT protocol, though HTTP can be used but MQTT is the preferred method. The MQTT protocol is a machine-to-machine protocol optimized for small sensors and mobile devices, which makes it ideal for an Internet of Things infrastructure. It's basically a very simple publisher/subscriber client, where a publisher publishes data to a topic and a subscriber can listen to topics to get updates. So sending and receiving data from the platform can simply be done by sending data to the right topic and subscribing to the topic the client wants to get updates from, in this case all topics are subscribed to in order to receive all asset state updates. In order to make this communication easier, the Paho Java Client library\footnote{https://eclipse.org/paho/clients/java/} was used.
 
 \subsection{User interface}
 \label{subsec:userinterface}
+This part of the application is the most flexible one and doesn't need a whole lot of explanation since everybody will use a different user interface. The interface used for this prototype looks very simple and is in fact pretty easy to implement. This because most of the work has gone into the network and Bluetooth layer, and the user interface is just something to route the data through.
+
+The first screen is a \texttt{RecyclerView} in a \texttt{SwipeRefreshLayout}. The swipe to refresh layout serves to scan, as it's not that efficient to have the device scanning for connections all the time. It will scan for a set amount of seconds and fill the \texttt{RecyclerView} with any devices it finds, displaying the device name, device address and RSSI (signal strength).
+
+Once a device has been chosen, a new fragment opens with more information about the device. At the top of the screen the device name, device address and RSSI are still displayed. The rest of the screen is filled up using an \texttt{ExpandableListView} which displays all Services in the first level and the Characteristics in the second. The component has been modified so it can expand to three levels, this to accomodate extra information about a Characteristic. Once a Characteristic is expanded, the third level opens which displays the data type, properties (read, write, write no response, ...) and three buttons. The buttons serve to toggle notifications, read and write data. Once data has been read, additional info will be displayed in this third level such as the hexadecimal value, string value, decimal value and timestamp of the last time the data was updated.
 
 \chapter{Discussion}
 \label{ch:discussion}
@@ -670,8 +684,15 @@ The \texttt{BluetoothGatt} class allows exposes everything that has to do with d
 \section{Concerns}
 \label{sec:concerns}
 
-A more concerning limitation is that Bluetooth Low Energy operates in the 2.4 GHz ISM frequency band, the same band that WiFi uses. They've chosen this band because the 2.4 GHz ISM band doesn't require any licensing cost, contributing to the very low chip cost of Bluetooth Low Energy devices. Luckily, Bluetooth Low Energy features an excellent algorithm to avoid major interference from WiFi, as it will avoid any channel that is being heavily used by other technologies.
+As with every technology, concerns arise once it starts to become popular. Internet of Things and Bluetooth Low Energy are no exception to this and have caused a fair bit of commotion.
 
+First of all is a big problem: security. There are numerous articles being written the last couple of years that would make you wonder if the Internet of Things is even worth it. To give a couple of examples, there is an Internet of Things search engine called Shodan\footnote{https://www.shodan.io/} which allows users to browse unsecured internet-enabled webcams, even baby monitors \citep{porup20162, stanislav2015}. Even the US Intelligence Community has placed Internet of Things on their watch list and believe it is a very big threat \citep{clapper2016}.
+
+Two hackers have done something that might alarm even more people. They have succeeded in hacking an internet-enabled car, gaining control a lot of the car's functions \citep{greenberg2015}. To demonstrate this, the process was documented as a man was driving with an SUV on the highway with the hackers miles away with their laptops. They were able to blast the air conditioning, put pictures on the car display, turn on the radio, spray wind shield wiper fluid and they could even kill the engine of the car. It didn't stop there as they were even able to steer the car while it was in reverse and disable the brakes at low speeds. After this incident, about 1.4 million vehicles were recalled for a software update \citep{kessler2015}. Numerous other cars were also exposed for hackers like the Tesla Model S, certain BMW vehicles, Rolls-Royce vehicles and Mini vehicles \citep{hirsch2015}.
+
+Bluetooth Low Energy doesn't stay under the radar either, as it's increasingly gaining popularity and thus, gaining suspicion. With a cheap phone and a small application, it is possible to locate devices around the smartphone and see what they are. This can be an issue because burglars could simply walk around with this application installed and check which houses have a lot of technology worth stealing \citep{ashford2015}. China has even banned the use of internet-connected wearable technology as it could give the soldiers' position away during combat \citep{bbcnews2015}.
+
+Some students at the University of Illinois have also used the gyroscope and accelerometer of a smartwatch to detect what the user is typing on an ordinary or laptop keyboard \citep{iyer2015, wang2015mole}.
 
 \section{Future work}
 \label{sec:futurework}
